@@ -2,6 +2,8 @@ ikiwiki (3.20110906) UNRELEASED; urgency=low
 
   * searchquery.tmpl: Track escaping change in upstream template.
     Thanks Olly Betts for review.
+  * svn: Support subversion 1.7, which does not have .svn in each
+    subdirectory.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 27 Sep 2011 10:47:13 -0400
 
